--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -196,7 +196,7 @@
 
 
 
-    <div class="zoom__meetings sp_top_100 sp_bottom_70" data-aos="fade-up">
+    <div class="zoom__meetings sp_bottom_70" data-aos="fade-up">
         <div class="container full__width__padding">
 
             <div class="section__title">
