--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -285,6 +285,58 @@
 
 
 
+    <!-- blog__section__start -->
+    <div class="blogarea__2 sp_top_100 sp_bottom_100">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-12" data-aos="fade-up">
+                    <div class="section__title__2 text-center teamarea__margin">
+                        <div class="section__small__title">
+                            {% comment %} <span>News & Blog</span> {% endcomment %}
+                        </div>
+                        <div class="section__title__heading__2 section__title__heading__3 heading__fontsize__2">
+                            <h2>Latest Research</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+
+                {% for research in researches %}
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12" data-aos="fade-up">
+                    <div class="single__blog__wraper">
+                        <div class="single__blog__img">
+                            <img loading="lazy" src="{{ research.image.url }}" alt="blog">
+                            <div class="single__blog__button">
+                                {% comment %} <a class="default__button" href="#">Story</a> {% endcomment %}
+                            </div>
+                        </div>
+                        <div class="single__blog__content">
+                            <p>{{ research.date }}</p>
+                            <h4> <a href="#">{{ research.title }}</a></h4>
+                            <div class="single__blog__bottom__button">
+                                <a href="{{ research.link }}">Read More
+                                    <i class="icofont-long-arrow-right"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+
+                <div class="col-xl-12" data-aos="fade-up">
+                    <div class="blogarea__bottom__button">
+                        <a class="default__button" href="{% url 'research_papers' %}">MORE Research</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- blog__section__end -->
+
+
+
+
     <!-- aboutarea__2__section__start -->
     <div class="aboutarea__2 sp_top_30">
       <div class="container">
