--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -305,8 +305,8 @@
                 {% for research in researches %}
                 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12" data-aos="fade-up">
                     <div class="single__blog__wraper">
-                        <div class="single__blog__img">
-                            <img loading="lazy" src="{{ research.image.url }}" alt="blog">
+                        <div class="single__blog__img" style="height: 250px; overflow: hidden;">
+                            <img loading="lazy" src="{{ research.image.url }}" alt="blog" style="width: 100%; height: 100%; object-fit: cover;">
                             <div class="single__blog__button">
                                 {% comment %} <a class="default__button" href="#">Story</a> {% endcomment %}
                             </div>
