--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -336,6 +336,82 @@
 
 
 
+    {% if blogs %}
+    <div class="gridarea__2 sp_bottom_100 sp_top_80" data-aos="fade-up">
+      <div class="container-fluid full__width__padding">
+        <div class="section__title">
+            <div class="section__title__heading">
+                <h2>Latest Blogs</h2>
+            </div>
+        </div>
+
+        <div class="row row__custom__class mb-5" data-aos="fade-up">
+          <div class="swiper featured__course">
+            <div class="swiper-wrapper">
+              {% for post in blogs %}
+                {% comment %} <div class="col-md-6 col-lg-4 swiper-slide"> {% endcomment %}
+                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 column__custom__class swiper-slide">
+
+                  <div class="card h-100 shadow-sm border-0 rounded-4 overflow-hidden hover-shadow transition-all">
+
+                    {% if post.image %}
+                      <!-- Image wrapper -->
+                      <div class="position-relative" style="width: 100%; height: 0; padding-bottom: 56.25%;">
+                        <img src="{{ post.image.url }}" alt="{{ post.title }}" 
+                            class="img-fluid position-absolute top-0 start-0 w-100 h-100" 
+                            style="object-fit: cover;">
+
+                        <!-- View Count Badge -->
+                        <div class="position-absolute end-0 m-2 p-1 bg-light rounded shadow-sm d-flex align-items-center justify-content-center">
+                          <i class="icofont-read-book"></i>
+                          <span class="ms-1 small">{{ post.view_count }}</span>
+                        </div>
+                      </div>
+                    {% endif %}
+
+                    <div class="card-body p-4 d-flex flex-column">
+                      <!-- Title -->
+                      <h5 class="card-title mb-2">
+                        <a href="{% url 'blog_detail' post.slug %}" class="text-decoration-none text-dark fw-semibold">
+                          {{ post.title }}
+                        </a>
+                      </h5>
+
+                      <!-- Author & Date -->
+                      {% if post.created_at or post.author %}
+                        <p class="text-muted small mb-3">
+                          {% if post.created_at %} <i class="fa-regular fa-calendar"></i> {{ post.created_at|date:"F j, Y" }}{% endif %}
+                          {% if post.author %} &nbsp;•&nbsp; <i class="fa-regular fa-user"></i> {{ post.author.first_name }}{% endif %}
+                        </p>
+                      {% endif %}
+
+                      <!-- Post Content -->
+                      <div class="flex-grow-1 text-muted post-content">
+                        {{ post.content|truncatewords_html:25|safe }}
+                      </div>
+
+                      <!-- Read More Button -->
+                      <a href="{% url 'blog_detail' post.slug %}" class="btn btn-outline-primary w-100 mt-3">
+                        Read More →
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              {% endfor %}
+            </div>
+            <div class="slider__controls__wrap slider__controls__arrows">
+              <div class="swiper-button-next arrow-btn"></div>
+              <div class="swiper-button-prev arrow-btn"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    {% endif %}
+
+
+
+
 
     <!-- aboutarea__2__section__start -->
     <div class="aboutarea__2 sp_top_30">
