--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -431,44 +431,42 @@
             <div class="row">
                 <div class="col-xl-12" data-aos="fade-up">
                     <div class="section__title__2 text-center teamarea__margin">
-                        <div class="section__small__title">
-                            {% comment %} <span>News & Blog</span> {% endcomment %}
-                        </div>
                         <div class="section__title__heading__2 section__title__heading__3 heading__fontsize__2">
                             <h2>Latest Research</h2>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row row__custom__class mb-5" data-aos="fade-up">
+              <div class="swiper featured__course">
 
-                {% for research in researches %}
-                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12" data-aos="fade-up">
-                    <div class="single__blog__wraper d-flex flex-column h-100"> <!-- full height -->
-                        <div class="single__blog__img" style="height: 250px; overflow: hidden;">
-                            <img loading="lazy" src="{{ research.image.url }}" alt="blog" style="width: 100%; height: 100%; object-fit: cover;">
-                            <div class="single__blog__button">
-                                {% comment %} <a class="default__button" href="#">Story</a> {% endcomment %}
-                            </div>
-                        </div>
-                        <div class="single__blog__content d-flex flex-column flex-grow-1"> <!-- content stretch -->
-                            <p>{{ research.date }}</p>
-                            <h4> <a href="#">{{ research.title|truncatechars:100 }}</a></h4>
-                            <div class="single__blog__bottom__button mt-auto"> <!-- push to bottom -->
-                                <a href="{{ research.link }}">Read More
-                                    <i class="icofont-long-arrow-right"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
+                <div class="swiper-wrapper">
+                  {% for research in researches %}
+                  <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 column__custom__class swiper-slide">
+                      <div class="single__blog__wraper d-flex flex-column h-100"> <!-- full height -->
+                          <div class="single__blog__img" style="height: 250px; overflow: hidden;">
+                              <img loading="lazy" src="{{ research.image.url }}" alt="blog" style="width: 100%; height: 100%; object-fit: cover;">
+                          </div>
+                          <div class="single__blog__content d-flex flex-column flex-grow-1"> <!-- content stretch -->
+                              <p>{{ research.date }}</p>
+                              <h4> <a href="#">{{ research.title|truncatechars:100 }}</a></h4>
+                              <div class="single__blog__bottom__button mt-auto"> <!-- push to bottom -->
+                                  <a href="{{ research.link }}">Read More
+                                      <i class="icofont-long-arrow-right"></i>
+                                  </a>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  {% endfor %}
                 </div>
-                {% endfor %}
 
-                <div class="col-xl-12" data-aos="fade-up">
-                    <div class="blogarea__bottom__button">
-                        <a class="default__button" href="{% url 'research_papers' %}">MORE Research</a>
-                    </div>
+                <div class="slider__controls__wrap slider__controls__arrows">
+                  <div class="swiper-button-next arrow-btn"></div>
+                  <div class="swiper-button-prev arrow-btn"></div>
                 </div>
+  
+              </div>
             </div>
         </div>
     </div>
@@ -535,6 +533,7 @@
                       </a>
                     </div>
                   </div>
+
                 </div>
               {% endfor %}
             </div>
