--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1117,11 +1117,11 @@
               </div>
               <form action="#">
                 <div class="registerarea__button">
-                  <a class="default__button" href="#">Sign Up
+                  <a class="default__button" href="accounts/login/#signup">Sign Up
                     {% comment %} <i class="icofont-long-arrow-right"></i> {% endcomment %}
                   </a>
                   <span class="mx-3">or</span>
-                  <a class="default__button" href="#">Sign In
+                  <a class="default__button" href="{% url 'user_login' %}">Sign In
        
                   </a>
                 </div>
