--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -599,7 +599,7 @@
                   <span class="counter">10</span>k
 
                 </div>
-                <p>tOTAL INSTRUCTOR</p>
+                <p>TOTAL INSTRUCTOR</p>
 
               </div>
             </div>
