--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1196,6 +1196,116 @@
     <!-- testimonial__section__start -->
 
 
+
+    <!-- blog__section__start -->
+    <div class="blogarea sp_bottom_70 sp_top_100">
+      <div class="container">
+        <div class="row" data-aos="fade-up">
+          <div class="col-xl-12">
+            <div class="section__title text-center">
+              <div class="section__title__button">
+                <div class="default__small__button">News & Blogs</div>
+              </div>
+              <div class="section__title__heading">
+                <h2>Leatest News & Blog</h2>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xl-8 col-lg-8" data-aos="fade-up">
+            <div class="blogarea__content__wraper">
+              <div class="blogarea__img">
+                <img loading="lazy" src="{% static 'img/blog/blog_1.png' %}" alt="blog">
+                <div class="blogarea__date">
+                  20
+                  <span>Oct</span>
+                </div>
+              </div>
+              <div class="blogarea__text__wraper">
+                <h3><a href="#">It is a long established fact that a reader
+                  will be Standard Part</a></h3>
+                <div class="blogarea__para">
+                  <p>A wonderful serenity has taken possssion of my entire souing like these sweet
+                    morning spring whch
+                    enjoy with my whole heart I am alone, and feel the charm of existenceths spot whch
+                    was create For
+                    the bliss of souls
+                    like mineing am so happy my dear frend so absori bed in the exquste sens of mere.
+                    A wonderful
+                    serenity has taken posseson of my entire soung like these sweet mornngs spring
+                    whch enjoy …</p>
+                </div>
+
+                <div class="blogarea__icon">
+                  <div class="blogarea__person">
+                    <div class="blogarea__img">
+                      <img loading="lazy" src="{% static 'img/blog/blog_2.png' %}" alt="">
+                    </div>
+                    <div class="blogarea__name">
+                      <span> By</span>: Mirnsdo Jons
+                    </div>
+                  </div>
+                  <div class="blogarea__list">
+                    <ul>
+                      <li>
+                        <a href="#"><i class="icofont-facebook"></i></a>
+                      </li>
+
+                      <li>
+                        <a href="#"><i class="icofont-youtube-play"></i></a>
+                      </li>
+                      <li>
+                        <a href="#"><i class="icofont-instagram"></i></a>
+                      </li>
+                      <li>
+                        <a href="#"><i class="icofont-twitter"></i></a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+          <div class="col-xl-4 col-lg-4" data-aos="fade-up">
+            <div class="blogarea__content__wraper">
+              <div class="blogarea__img">
+                <img loading="lazy" src="{% static 'img/blog/blog_3.png' %}" alt="blog">
+                <div class="blogarea__date small__date">
+                  20
+                  <span>Oct</span>
+                </div>
+              </div>
+              <div class="blogarea__text__wraper blogarea__text__wraper__2">
+                <h3><a href="#">It is a long established fact that a reader
+                  will be Standard Part</a></h3>
+              </div>
+
+            </div>
+
+            <div class="blogarea__content__wraper">
+              <div class="blogarea__img">
+                <img loading="lazy" src="{% static 'img/blog/blog_4.png' %}" alt="blog">
+                <div class="blogarea__date small__date">
+                  20
+                  <span>Oct</span>
+                </div>
+              </div>
+              <div class="blogarea__text__wraper blogarea__text__wraper__2">
+                <h3><a href="#">It is a long established fact that a reader
+                  will be Standard Part</a></h3>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- blog__section__end -->
+
+
+
     {% include 'partials/footer.html' %}
 
   </main>
