--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -427,7 +427,7 @@
 
 
 
-    <!-- blog__section__start -->
+    <!-- Research -->
     <div class="blogarea__2 sp_top_100 sp_bottom_100">
         <div class="container">
             <div class="row">
@@ -444,7 +444,7 @@
 
                 <div class="swiper-wrapper">
                   {% for research in researches %}
-                  <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 column__custom__class swiper-slide">
+                  <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 column__custom__class swiper-slide">
                       <div class="single__blog__wraper d-flex flex-column h-100"> <!-- full height -->
                           <div class="single__blog__img" style="height: 250px; overflow: hidden;">
                               <img loading="lazy" src="{{ research.image.url }}" alt="blog" style="width: 100%; height: 100%; object-fit: cover;">
@@ -472,7 +472,7 @@
             </div>
         </div>
     </div>
-    <!-- blog__section__end -->
+    <!-- Research -->
 
 
 
