--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1207,102 +1207,76 @@
                 <div class="default__small__button">News & Blogs</div>
               </div>
               <div class="section__title__heading">
-                <h2>Leatest News & Blog</h2>
+                <h2>Latest News & Blog</h2>
               </div>
             </div>
           </div>
         </div>
+
         <div class="row">
+          <!-- Left big blog (latest blog) -->
           <div class="col-xl-8 col-lg-8" data-aos="fade-up">
+            {% if blogs %}
+            {% with blogs.0 as main_blog %}
             <div class="blogarea__content__wraper">
-              <div class="blogarea__img">
-                <img loading="lazy" src="{% static 'img/blog/blog_1.png' %}" alt="blog">
+              <div class="blogarea__img" style="height: 400px; object-fit: cover;">
+                <img loading="lazy" src="{{ main_blog.image.url }}" alt="blog">
                 <div class="blogarea__date">
-                  20
-                  <span>Oct</span>
+                  {{ main_blog.created_at|date:"d" }}
+                  <span>{{ main_blog.created_at|date:"M" }}</span>
                 </div>
               </div>
               <div class="blogarea__text__wraper">
-                <h3><a href="#">It is a long established fact that a reader
-                  will be Standard Part</a></h3>
+                <h3><a href="{% url 'blog_detail' main_blog.slug %}">{{ main_blog.title }}</a></h3>
                 <div class="blogarea__para">
-                  <p>A wonderful serenity has taken possssion of my entire souing like these sweet
-                    morning spring whch
-                    enjoy with my whole heart I am alone, and feel the charm of existenceths spot whch
-                    was create For
-                    the bliss of souls
-                    like mineing am so happy my dear frend so absori bed in the exquste sens of mere.
-                    A wonderful
-                    serenity has taken posseson of my entire soung like these sweet mornngs spring
-                    whch enjoy …</p>
+                  <p>{{ main_blog.content|striptags|truncatewords:40 }}</p>
                 </div>
 
                 <div class="blogarea__icon">
                   <div class="blogarea__person">
                     <div class="blogarea__img">
-                      <img loading="lazy" src="{% static 'img/blog/blog_2.png' %}" alt="">
+                      {% if main_blog.author.user.profile_picture %}
+                      <img loading="lazy" src="{{ main_blog.author.user.profile_picture.url }}" alt="">
+                      {% else %}
+                      <img loading="lazy" src="{% static 'img/profile.png' %}" alt="">
+                        
+                      {% endif %}
+                      
                     </div>
                     <div class="blogarea__name">
-                      <span> By</span>: Mirnsdo Jons
+                      <span>By</span>: {{ main_blog.author.user.first_name }}
                     </div>
                   </div>
-                  <div class="blogarea__list">
-                    <ul>
-                      <li>
-                        <a href="#"><i class="icofont-facebook"></i></a>
-                      </li>
-
-                      <li>
-                        <a href="#"><i class="icofont-youtube-play"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="icofont-instagram"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="icofont-twitter"></i></a>
-                      </li>
-                    </ul>
-                  </div>
                 </div>
               </div>
-
             </div>
+            {% endwith %}
+            {% endif %}
           </div>
+
+          <!-- Right side list of next 2 blogs -->
           <div class="col-xl-4 col-lg-4" data-aos="fade-up">
+            {% for blog in blogs|slice:"1:3" %}
             <div class="blogarea__content__wraper">
               <div class="blogarea__img">
-                <img loading="lazy" src="{% static 'img/blog/blog_3.png' %}" alt="blog">
+                <img loading="lazy" src="{{ blog.image.url }}" alt="blog">
                 <div class="blogarea__date small__date">
-                  20
-                  <span>Oct</span>
+                  {{ blog.created_at|date:"d" }}
+                  <span>{{ blog.created_at|date:"M" }}</span>
                 </div>
               </div>
               <div class="blogarea__text__wraper blogarea__text__wraper__2">
-                <h3><a href="#">It is a long established fact that a reader
-                  will be Standard Part</a></h3>
+                <h3><a href="{% url 'blog_detail' blog.slug %}">{{ blog.title }}</a></h3>
               </div>
-
             </div>
-
-            <div class="blogarea__content__wraper">
-              <div class="blogarea__img">
-                <img loading="lazy" src="{% static 'img/blog/blog_4.png' %}" alt="blog">
-                <div class="blogarea__date small__date">
-                  20
-                  <span>Oct</span>
-                </div>
-              </div>
-              <div class="blogarea__text__wraper blogarea__text__wraper__2">
-                <h3><a href="#">It is a long established fact that a reader
-                  will be Standard Part</a></h3>
-              </div>
-
-            </div>
+            {% endfor %}
           </div>
+
         </div>
       </div>
     </div>
     <!-- blog__section__end -->
+
 
 
 
