--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1235,8 +1235,9 @@
                 <div class="blogarea__icon">
                   <div class="blogarea__person">
                     <div class="blogarea__img">
-                      {% if main_blog.author.user.profile_picture %}
-                      <img loading="lazy" src="{{ main_blog.author.user.profile_picture.url }}" alt="">
+                      {% if main_blog.author.profile_picture %}
+                      <img loading="lazy" class="rounded" src="{{ main_blog.author.profile_picture.url }}"
+                          style="object-fit: cover;width: 40px;height: 40px;">
                       {% else %}
                       <img loading="lazy" src="{% static 'img/profile.png' %}" alt="">
                         
@@ -1244,7 +1245,7 @@
                       
                     </div>
                     <div class="blogarea__name">
-                      <span>By</span>: {{ main_blog.author.user.first_name }}
+                      <span>By</span>: {{ main_blog.author.first_name }}
                     </div>
                   </div>
                 </div>
