--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -526,34 +526,32 @@
             </div>
           </div>
 
-          <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 service__wrap__content">
+          <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 service__wrap__content d-none d-sm-flex">
 
             <div class="service__animate__shape__2">
               <img loading="lazy" src="{% static 'img/service/service__shape__bg__1.png' %}" alt="">
             </div>
 
-<div class="row g-3">
-  <!-- Column 1 -->
-  <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12" data-aos="fade-up">
-    <img src="{% static 'img/thesis/thesis1.png' %}" class="img-fluid rounded w-100 mb-3">
-  </div>
+            <div class="row g-3">
+              <!-- Column 1 -->
+              <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12" data-aos="fade-up">
+                <img src="{% static 'img/thesis/thesis1.png' %}" class="img-fluid rounded w-100 mb-3">
+              </div>
 
-  <!-- Column 2 -->
-  <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12" data-aos="fade-up">
-    <div class="row g-3">
-      <!-- image2 -->
-      <div class="col-6 col-md-12">
-        <img src="{% static 'img/thesis/thesis1.png' %}" class="img-fluid rounded w-100">
-      </div>
-      <!-- image3 -->
-      <div class="col-6 col-md-12">
-        <img src="{% static 'img/thesis/thesis1.png' %}" class="img-fluid rounded w-100">
-      </div>
-    </div>
-  </div>
-</div>
-
-
+              <!-- Column 2 -->
+              <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12" data-aos="fade-up">
+                <div class="row g-3">
+                  <!-- image2 -->
+                  <div class="col-6 col-md-12">
+                    <img src="{% static 'img/thesis/thesis1.png' %}" class="img-fluid rounded w-100">
+                  </div>
+                  <!-- image3 -->
+                  <div class="col-6 col-md-12">
+                    <img src="{% static 'img/thesis/thesis1.png' %}" class="img-fluid rounded w-100">
+                  </div>
+                </div>
+              </div>
+            </div>
 
           </div>
         </div>
