--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -35,7 +35,7 @@
 
                         <div class="herobannerarea__title">
                             <div class="herobannerarea__small__title">
-                                <span>Informatics. Intelligence. Invention.</span>
+                                <span class="dawn-blue">Informatics. Intelligence. Invention.</span>
                             </div>
                             <div class="herobannerarea__title__heading__2 herobannerarea__title__heading__3">
                                 <h2>Institute of <span class="dawn-blue">Bioinformatics</span> and <span class="dawn-blue">AI</span></h2>
