--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -535,7 +535,7 @@
             <div class="row g-3">
               <!-- Column 1 -->
               <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12" data-aos="fade-up">
-                <img src="{% static 'img/thesis/thesis1.png' %}" class="img-fluid rounded w-100 mb-3">
+                <img loading="lazy" src="{% static 'img/thesis/thesis1.png' %}" class="img-fluid rounded w-100 mb-3">
               </div>
 
               <!-- Column 2 -->
@@ -543,11 +543,11 @@
                 <div class="row g-3">
                   <!-- image2 -->
                   <div class="col-6 col-md-12">
-                    <img src="{% static 'img/thesis/thesis1.png' %}" class="img-fluid rounded w-100">
+                    <img loading="lazy" src="{% static 'img/thesis/thesis1.png' %}" class="img-fluid rounded w-100">
                   </div>
                   <!-- image3 -->
                   <div class="col-6 col-md-12">
-                    <img src="{% static 'img/thesis/thesis1.png' %}" class="img-fluid rounded w-100">
+                    <img loading="lazy" src="{% static 'img/thesis/thesis1.png' %}" class="img-fluid rounded w-100">
                   </div>
                 </div>
               </div>
@@ -573,16 +573,16 @@
 
             <div class="row g-3">
               <div class="col-6" data-aos="fade-up">
-                <img src="{% static 'img/thesis/thesis1.png' %}" class="img-fluid rounded">
+                <img loading="lazy" src="{% static 'img/thesis/thesis1.png' %}" class="img-fluid rounded">
               </div>
               <div class="col-6" data-aos="fade-up">
-                <img src="{% static 'img/thesis/thesis1.png' %}" class="img-fluid rounded">
+                <img loading="lazy" src="{% static 'img/thesis/thesis1.png' %}" class="img-fluid rounded">
               </div>
               <div class="col-6" data-aos="fade-up">
-                <img src="{% static 'img/thesis/thesis1.png' %}" class="img-fluid rounded">
+                <img loading="lazy" src="{% static 'img/thesis/thesis1.png' %}" class="img-fluid rounded">
               </div>
               <div class="col-6" data-aos="fade-up">
-                <img src="{% static 'img/thesis/thesis1.png' %}" class="img-fluid rounded">
+                <img loading="lazy" src="{% static 'img/thesis/thesis1.png' %}" class="img-fluid rounded">
               </div>
             </div>
 
