--- a/courses/templates/courses/course-list.html
+++ b/courses/templates/courses/course-list.html
@@ -165,7 +165,7 @@
                                             <div class="gridarea__list">
                                                 <ul>
                                                     <li><i class="icofont-book-alt"></i> {{ course.total_videos }} Lectures</li>
-                                                    <li><i class="icofont-clock-time"></i> {{ course.total_duration }} min</li>
+                                                    <li><i class="icofont-clock-time"></i> {{ course.total_duration_in_hours }} Hr</li>
                                                 </ul>
                                             </div>
                                             <div class="gridarea__heading">
