--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -38,7 +38,7 @@
                                 <span class="dawn-blue">Informatics. Intelligence. Invention.</span>
                             </div>
                             <div class="herobannerarea__title__heading__2 herobannerarea__title__heading__3">
-                                <h2>Institute of <span class="dawn-blue">Bioinformatics</span> and <span class="dawn-blue">AI</span></h2>
+                                <h2>Institute of <span class="dawn-blue">Bioinformatics</span> and <span class="dawn-blue">Artificial Intelligence</span></h2>
                             </div>
                         </div>
 
@@ -55,9 +55,9 @@
                 <div class="col-xl-5 col-lg-5 col-md-12 col-sm-12 col-12" data-aos="fade-up">
 
                     <div class="herobanner__video registerarea__video">
-                      <iframe width="500" height="350" src="https://www.youtube.com/embed/sH0te4d6grc?si=f0c6EaiL6RRyk4KQ&controls=0&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                      <iframe width="500" height="350" src="https://www.youtube.com/embed/Ata2zo4WkJs?controls=0&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
-
+              
                 </div>
 
                 {% comment %} <div class="herobannerarea__icon__2">
