--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -47,27 +47,19 @@
                             <p>Empowering the next generation of scientists and innovators through cutting edge education in Bioinformatics, Artificial Intelligence, and Computational Biology.</p>
                         </div>
                         <div class="hreobannerarea__button__2">
-                            <a class="default__button" href="{% url 'course_list' %}">View Courses</a>
-                            <a class="default__button hreobannerarea__button__3" href="#">Explore More</a>
+                            <a class="default__button bg-dark border-0" href="{% url 'course_list' %}">View Courses</a>
+                            <a class="default__button hreobannerarea__button__3 dawn-blue-bg border-0" href="#">Explore More</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-xl-5 col-lg-5 col-md-12 col-sm-12 col-12" data-aos="fade-up">
 
                     <div class="herobanner__video registerarea__video">
-                      <iframe width="500" height="350" src="https://www.youtube.com/embed/Ata2zo4WkJs?controls=0&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                      <iframe width="700" height="500" src="https://www.youtube.com/embed/Ata2zo4WkJs?controls=0&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
               
                 </div>
 
-                {% comment %} <div class="herobannerarea__icon__2">
-                    <img loading="lazy" class="herobanner__common__img herobanner__img__1"
-                        src="{% static 'img/herobanner/herobanner__1.png' %}" alt="photo">
-                    <img loading="lazy" class="herobanner__common__img herobanner__img__4"
-                        src="{% static 'img/herobanner/herobanner__3.png' %}" alt="photo">
-                    <img loading="lazy" class="herobanner__common__img herobanner__img__5"
-                        src="{% static 'img/herobanner/herobanner__5.png' %}" alt="photo">
-                </div> {% endcomment %}
             </div>
         </div>
     </div>
