--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -55,7 +55,7 @@
                 <div class="col-xl-5 col-lg-5 col-md-12 col-sm-12 col-12" data-aos="fade-up">
 
                     <div class="herobanner__video registerarea__video">
-                      <iframe width="700" height="500" src="https://www.youtube.com/embed/Ata2zo4WkJs?controls=0&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                      <iframe width="900" height="500" src="https://www.youtube.com/embed/Ata2zo4WkJs?controls=0&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
               
                 </div>
@@ -142,15 +142,16 @@
 
                 <div class="tab-pane fade active show" id="projects__one" role="tabpanel" aria-labelledby="projects__one">
                   <div class="row">
-                    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12" data-aos="fade-up">
-                      <div class="about__right__wraper__2">
-                        <div class="educationarea__img" data-tilt>
-                          <img loading="lazy" class="aboutarea__2__img__1" src="{% static 'img/about/about_2.png' %}" alt="education">
-                          {% comment %} <img loading="lazy" class="aboutarea__2__img__2" src="{% static 'img/about/about_3.png' %}" alt="education"> {% endcomment %}
-                          {% comment %} <img loading="lazy" class="aboutarea__2__img__3" src="{% static 'img/about/about_4.png' %}" alt="education"> {% endcomment %}
-                          {% comment %} <img loading="lazy" class="aboutarea__2__img__4" src="{% static 'img/about/about_11.png' %}" alt="education"> {% endcomment %}
-                        </div>
-                      </div>
+                    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 d-flex align-items-center" data-aos="fade-up">
+                      
+                        
+                          <iframe width="560" height="315" src="https://www.youtube.com/embed/I654Y4IlzT0?si=tUzAbqJJxfdVPksY"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                          </iframe>
+                        
+                      
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12" data-aos="fade-up">
                       <div class="aboutarea__content__wraper">
@@ -158,12 +159,19 @@
                           <div class="default__small__button">About Us</div>
                         </div>
                         <div class="aboutarea__headding heading__underline">
-                          <h2>Welcome to the Learning Center</h2>
+                          <h2>🚀 IBAI: Your Launchpad to Success in Bioinformatics and AI</h2>
                         </div>
                         <div class="aboutarea__para aboutarea__para__2">
                           <p>
-                            25+Contrary to popular belief, Lorem Ipsum is not simply random text roots in a piece of classical
-                            Latin literature from 45 BC
+                            The Institute of Bioinformatics & Artificial Intelligence (IBAI), an entity of Dawn of Bioinformatics Limited, Bangladesh,
+                            offers a robust platform designed to propel you toward a successful career in the burgeoning fields of Bioinformatics and
+                            Artificial Intelligence. We have structured a carefully designed 4-Step Launchpad that guides learners from beginner to expert level.
+                            These programs commence with Short Courses (covering Genomics, Proteomics, ML & AI) to solidify fundamental concepts for beginners.
+                            This is followed by comprehensive Training Programs (25+ programs, available both online and offline) dedicated to enhancing practical
+                            skills. For career advancement, we offer a 6-Month Research Internship focused on tools and techniques, preparing graduates
+                            and professionals for jobs or higher studies. Finally, our tailored Thesis Support (4-6 months) provides MSc students with personalized
+                            one-to-one sessions and essential technical guidance to ensure timely completion. Join IBAI today and empower your future in Bioinformatics
+                            and AI.
                           </p>
                         </div>
                       </div>
@@ -176,25 +184,26 @@
                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12" data-aos="fade-up">
                       <div class="about__right__wraper__2">
                         <div class="educationarea__img" data-tilt>
-                          <img loading="lazy" class="aboutarea__2__img__1" src="{% static 'img/about/about_2.png' %}" alt="education">
-                          {% comment %} <img loading="lazy" class="aboutarea__2__img__2" src="{% static 'img/about/about_3.png' %}" alt="education"> {% endcomment %}
-                          {% comment %} <img loading="lazy" class="aboutarea__2__img__3" src="{% static 'img/about/about_4.png' %}" alt="education"> {% endcomment %}
-                          {% comment %} <img loading="lazy" class="aboutarea__2__img__4" src="{% static 'img/about/about_11.png' %}" alt="education"> {% endcomment %}
+                          <img loading="lazy" class="aboutarea__2__img__1 w-100" src="{% static 'img/mission.png' %}" alt="education">
                         </div>
                       </div>
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12" data-aos="fade-up">
                       <div class="aboutarea__content__wraper">
                         <div class="aboutarea__button">
-                          <div class="default__small__button">Our Mission</div>
+                          <div class="default__small__button">🎯 Our Mission</div>
                         </div>
                         <div class="aboutarea__headding heading__underline">
-                          <h2>Welcome to the Learning Center</h2>
+                          {% comment %} <h2>Welcome to the Learning Center</h2> {% endcomment %}
                         </div>
                         <div class="aboutarea__para aboutarea__para__2">
                           <p>
-                            25+Contrary to popular belief, Lorem Ipsum is not simply random text roots in a piece of classical
-                            Latin literature from 45 BC
+                            To Empower: To empower individuals across all learning stages (beginners to professionals) for a successful career in Bioinformatics and Artificial Intelligence. <br>
+                            To Structure: To provide a comprehensive, four-pillar educational framework (Short Courses, Training Programs, Research Internship, and Thesis Support)
+                            that ensures systematic progression from basic concepts to expert proficiency. <br>
+                            To Enhance Skills: To focus on practical skill enhancement through 25+ training programs and hands-on research experience. <br>
+                            To Guide Success: To offer dedicated, personalized support (including 6-month internships and one-to-one thesis guidance)
+                            to ensure academic completion and successful career placement or higher studies. <br>
                           </p>
                         </div>
                       </div>
@@ -207,25 +216,24 @@
                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12" data-aos="fade-up">
                       <div class="about__right__wraper__2">
                         <div class="educationarea__img" data-tilt>
-                          <img loading="lazy" class="aboutarea__2__img__1" src="{% static 'img/about/about_2.png' %}" alt="education">
-                          {% comment %} <img loading="lazy" class="aboutarea__2__img__2" src="{% static 'img/about/about_3.png' %}" alt="education"> {% endcomment %}
-                          {% comment %} <img loading="lazy" class="aboutarea__2__img__3" src="{% static 'img/about/about_4.png' %}" alt="education"> {% endcomment %}
-                          {% comment %} <img loading="lazy" class="aboutarea__2__img__4" src="{% static 'img/about/about_11.png' %}" alt="education"> {% endcomment %}
+                          <img loading="lazy" class="aboutarea__2__img__1 w-100" src="{% static 'img/vision.png' %}" alt="education">
                         </div>
                       </div>
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12" data-aos="fade-up">
                       <div class="aboutarea__content__wraper">
                         <div class="aboutarea__button">
-                          <div class="default__small__button">Our Vision</div>
+                          <div class="default__small__button">✨ Our Vision</div>
                         </div>
                         <div class="aboutarea__headding heading__underline">
-                          <h2>Welcome to the Learning Center</h2>
+                          {% comment %} <h2>Welcome to the Learning Center</h2> {% endcomment %}
                         </div>
                         <div class="aboutarea__para aboutarea__para__2">
                           <p>
-                            25+Contrary to popular belief, Lorem Ipsum is not simply random text roots in a piece of classical
-                            Latin literature from 45 BC
+                            IBAI envisions becoming the leading platform for specialized education in Bioinformatics and Artificial Intelligence,
+                            where every learner, from beginner to professional, is seamlessly guided toward achieving complete academic success
+                            and shaping a future-ready career. Our goal is to cultivate a new generation of experts equipped with practical skills
+                            in areas like Genomics, Proteomics, and AI, ready to contribute to innovation and discovery.
                           </p>
                         </div>
                       </div>
@@ -416,76 +424,6 @@
     </div>
     <!-- Trainings -->
 
-
-    <!-- counter__section__start -->
-    <div class="counterarea sp_bottom_100 sp_top_50">
-      <div class="container">
-        <div class="row">
-          <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12" data-aos="fade-up">
-            <div class="counterarea__text__wraper">
-              <div class="counter__img">
-                <img loading="lazy" src="{% static 'img/counter/counter__1.png' %}" alt="counter">
-              </div>
-              <div class="counter__content__wraper">
-                <div class="counter__number">
-                  <span class="counter">27</span>+
-
-                </div>
-                <p>Total Acheivment</p>
-
-              </div>
-            </div>
-          </div>
-          <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12" data-aos="fade-up">
-            <div class="counterarea__text__wraper">
-              <div class="counter__img">
-                <img loading="lazy" src="{% static 'img/counter/counter__2.png' %}" alt="counter">
-              </div>
-              <div class="counter__content__wraper">
-                <div class="counter__number">
-                  <span class="counter">145</span>+
-
-                </div>
-                <p>TOTAL STUDENTS</p>
-
-              </div>
-            </div>
-          </div>
-          <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12" data-aos="fade-up">
-            <div class="counterarea__text__wraper">
-              <div class="counter__img">
-                <img loading="lazy" src="{% static 'img/counter/counter__3.png' %}" alt="counter">
-              </div>
-              <div class="counter__content__wraper">
-                <div class="counter__number">
-                  <span class="counter">10</span>k
-
-                </div>
-                <p>TOTAL INSTRUCTOR</p>
-
-              </div>
-            </div>
-          </div>
-          <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12" data-aos="fade-up">
-            <div class="counterarea__text__wraper">
-              <div class="counter__img">
-                <img loading="lazy" src="{% static 'img/counter/counter__4.png' %}" alt="counter">
-              </div>
-              <div class="counter__content__wraper">
-                <div class="counter__number">
-                  <span class="counter">214</span>+
-
-                </div>
-                <p>OVER THE WORLD</p>
-
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- counter__section__end-->
-
     <!-- populer__section__start -->
     <div class="populerarea__2 sp_top_50 sp_bottom_50">
       <div class="container">
@@ -506,12 +444,14 @@
               </div>
 
               <div class="populerarea__content__2">
-                <p class="populerarea__para__2">Construction is a general term meaning the art and science to form
-                  systems organizations, and comes from Latin Construction is a organizations, and comes from Latin
-                  construction and Old</p>
+                <p class="populerarea__para__2">
+                  Our 6-Month Research Internship is your fast track to mastery in Bioinformatics. Structured across three intensive levels,
+                  the program features continuous, practical application through a 4-Month Research Project integrated into each phase.
+                  Gain the high-level expertise in essential tools and techniques required for immediate career advancement.
+                </p>
               </div>
               <div class="populerarea__button__2">
-                <a class="default__button" href="{% url 'intern_list' %}">Explore More
+                <a class="default__button dawn-blue-bg border-0" href="{% url 'intern_list' %}">Explore More
                   <i class="icofont-long-arrow-right"></i>
                 </a>
               </div>
@@ -527,7 +467,7 @@
             <div class="row g-3">
               <!-- Column 1 -->
               <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12" data-aos="fade-up">
-                <img loading="lazy" src="{% static 'img/thesis/thesis1.png' %}" class="img-fluid rounded w-100 mb-3">
+                <img loading="lazy" src="{% static 'img/intern/1.png' %}" class="img-fluid rounded w-100 mb-3">
               </div>
 
               <!-- Column 2 -->
@@ -535,11 +475,11 @@
                 <div class="row g-3">
                   <!-- image2 -->
                   <div class="col-6 col-md-12">
-                    <img loading="lazy" src="{% static 'img/thesis/thesis1.png' %}" class="img-fluid rounded w-100">
+                    <img loading="lazy" src="{% static 'img/intern/2.png' %}" class="img-fluid rounded w-100">
                   </div>
                   <!-- image3 -->
                   <div class="col-6 col-md-12">
-                    <img loading="lazy" src="{% static 'img/thesis/thesis1.png' %}" class="img-fluid rounded w-100">
+                    <img loading="lazy" src="{% static 'img/intern/3.png' %}" class="img-fluid rounded w-100">
                   </div>
                 </div>
               </div>
@@ -565,16 +505,16 @@
 
             <div class="row g-3">
               <div class="col-6" data-aos="fade-up">
-                <img loading="lazy" src="{% static 'img/thesis/thesis1.png' %}" class="img-fluid rounded">
+                <img loading="lazy" src="{% static 'img/thesis/thesis0.png' %}" class="img-fluid rounded">
               </div>
               <div class="col-6" data-aos="fade-up">
                 <img loading="lazy" src="{% static 'img/thesis/thesis1.png' %}" class="img-fluid rounded">
               </div>
               <div class="col-6" data-aos="fade-up">
-                <img loading="lazy" src="{% static 'img/thesis/thesis1.png' %}" class="img-fluid rounded">
+                <img loading="lazy" src="{% static 'img/thesis/thesis2.png' %}" class="img-fluid rounded">
               </div>
               <div class="col-6" data-aos="fade-up">
-                <img loading="lazy" src="{% static 'img/thesis/thesis1.png' %}" class="img-fluid rounded">
+                <img loading="lazy" src="{% static 'img/thesis/thesis3.png' %}" class="img-fluid rounded">
               </div>
             </div>
 
@@ -595,12 +535,16 @@
               </div>
 
               <div class="populerarea__content__2">
-                <p class="populerarea__para__2">Construction is a general term meaning the art and science to form
-                  systems organizations, and comes from Latin Construction is a organizations, and comes from Latin
-                  construction and Old</p>
+                <p class="populerarea__para__2">
+                  Secure your academic success with our 4-6 month Bioinformatics Thesis Support, available Online and Offline.
+                  We offer focused dry lab support across fields like Genomics, Metagenomics, Proteomics, and AI
+                  (including 8+ Dry Lab and 4+ Wet Lab projects). Benefit from personalized One-to-One Sessions with a dedicated Mentor,
+                  guaranteed 4-hour response time (7 days), and comprehensive technical assistance, ensuring timely and successful
+                  thesis completion.
+                </p>
               </div>
               <div class="populerarea__button__2">
-                <a class="default__button" href="{% url 'thesis_list' %}">Explore More
+                <a class="default__button dawn-blue-bg border-0" href="{% url 'thesis_list' %}">Explore More
                   <i class="icofont-long-arrow-right"></i>
                 </a>
               </div>
