--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -156,13 +156,13 @@
                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12" data-aos="fade-up">
                       <div class="aboutarea__content__wraper">
                         <div class="aboutarea__button">
-                          <div class="default__small__button">About Us</div>
+                          <div class="default__small__button">🚀 About Us</div>
                         </div>
                         <div class="aboutarea__headding heading__underline">
-                          <h2>🚀 IBAI: Your Launchpad to Success in Bioinformatics and AI</h2>
+                          <h2>IBAI: Your Launchpad to Success in Bioinformatics and AI</h2>
                         </div>
                         <div class="aboutarea__para aboutarea__para__2">
-                          <p>
+                          <p style="text-align: justify;">
                             The Institute of Bioinformatics & Artificial Intelligence (IBAI), an entity of Dawn of Bioinformatics Limited, Bangladesh,
                             offers a robust platform designed to propel you toward a successful career in the burgeoning fields of Bioinformatics and
                             Artificial Intelligence. We have structured a carefully designed 4-Step Launchpad that guides learners from beginner to expert level.
@@ -184,7 +184,7 @@
                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12" data-aos="fade-up">
                       <div class="about__right__wraper__2">
                         <div class="educationarea__img" data-tilt>
-                          <img loading="lazy" class="aboutarea__2__img__1 w-100" src="{% static 'img/mission.png' %}" alt="education">
+                          <img loading="lazy" class="aboutarea__2__img__1 w-75" src="{% static 'img/mission.png' %}" alt="education">
                         </div>
                       </div>
                     </div>
@@ -216,7 +216,7 @@
                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12" data-aos="fade-up">
                       <div class="about__right__wraper__2">
                         <div class="educationarea__img" data-tilt>
-                          <img loading="lazy" class="aboutarea__2__img__1 w-100" src="{% static 'img/vision.png' %}" alt="education">
+                          <img loading="lazy" class="aboutarea__2__img__1 w-50" src="{% static 'img/vision.png' %}" alt="education">
                         </div>
                       </div>
                     </div>
@@ -229,7 +229,7 @@
                           {% comment %} <h2>Welcome to the Learning Center</h2> {% endcomment %}
                         </div>
                         <div class="aboutarea__para aboutarea__para__2">
-                          <p>
+                          <p style="text-align: justify;">
                             IBAI envisions becoming the leading platform for specialized education in Bioinformatics and Artificial Intelligence,
                             where every learner, from beginner to professional, is seamlessly guided toward achieving complete academic success
                             and shaping a future-ready career. Our goal is to cultivate a new generation of experts equipped with practical skills
