--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -197,12 +197,12 @@
                           {% comment %} <h2>Welcome to the Learning Center</h2> {% endcomment %}
                         </div>
                         <div class="aboutarea__para aboutarea__para__2">
-                          <p>
-                            To Empower: To empower individuals across all learning stages (beginners to professionals) for a successful career in Bioinformatics and Artificial Intelligence. <br>
-                            To Structure: To provide a comprehensive, four-pillar educational framework (Short Courses, Training Programs, Research Internship, and Thesis Support)
+                          <p style="text-align: justify;">
+                            <b>To Empower:</b> To empower individuals across all learning stages (beginners to professionals) for a successful career in Bioinformatics and Artificial Intelligence. <br>
+                            <b>To Structure:</b> To provide a comprehensive, four-pillar educational framework (Short Courses, Training Programs, Research Internship, and Thesis Support)
                             that ensures systematic progression from basic concepts to expert proficiency. <br>
-                            To Enhance Skills: To focus on practical skill enhancement through 25+ training programs and hands-on research experience. <br>
-                            To Guide Success: To offer dedicated, personalized support (including 6-month internships and one-to-one thesis guidance)
+                            <b>To Enhance Skills:</b> To focus on practical skill enhancement through 25+ training programs and hands-on research experience. <br>
+                            <b>To Guide Success:</b> To offer dedicated, personalized support (including 6-month internships and one-to-one thesis guidance)
                             to ensure academic completion and successful career placement or higher studies. <br>
                           </p>
                         </div>
