--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -44,7 +44,7 @@
 
 
                         <div class="herobannerarea__text herobannerarea__text__2">
-                            <p>Empowering the next generation of scientists and innovators through cutting edge education in Bioinformatics, Artificial Intelligence, and Computational Biology.</p>
+                            {% comment %} <p>Empowering the next generation of scientists and innovators through cutting edge education in Bioinformatics, Artificial Intelligence, and Computational Biology.</p> {% endcomment %}
                         </div>
                         <div class="hreobannerarea__button__2">
                             <a class="default__button bg-dark border-0" href="{% url 'course_list' %}">View Courses</a>
