--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -215,7 +215,7 @@
                   <div class="row">
                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12" data-aos="fade-up">
                       <div class="about__right__wraper__2">
-                        <div class="educationarea__img" data-tilt>
+                        <div class="educationarea__img d-flex justify-content-around" data-tilt>
                           <img loading="lazy" class="aboutarea__2__img__1 w-50" src="{% static 'img/vision.png' %}" alt="education">
                         </div>
                       </div>
